# IRCey-GUI

./: .gitignore  CMakeLists.txt  README.MD
src/: callbacks.c  callbacks.h  gui.c  gui.h  irc.c  irc.h  main.c  shared.h  util.c  util.h
